--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "ISC",
   "scripts": {
     "start": "yarn run build && cross-env NODE_ENV=production node dist/server.js",
+    "test": "mocha 'test/**/*.js' ",
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "tsc && npx tsc-alias",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
@@ -14,6 +15,7 @@
     "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
   "dependencies": {
+    "@types/mocha": "^9.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -30,6 +32,7 @@
     "hpp": "^0.2.3",
     "inversify": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.1.3",
     "mongoose": "^6.1.1",
     "morgan": "^1.10.0",
     "pm2": "^5.1.0",
@@ -53,7 +56,7 @@
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/hpp": "^0.2.1",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
