--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
+  "types" : [
+    "node"
+  ],
   "compileOnSave": false,
   "compilerOptions": {
+    "skipLibCheck": true,
     "target": "es2017",
     "lib": ["es2017", "esnext.asynciterable"],
     "typeRoots": ["node_modules/@types"],
