--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "scripts": {
     "start": "yarn run build && cross-env NODE_ENV=production node dist/server.js",
-    "test": "mocha 'test/**/*.js' ",
+    "test": "jest",
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "tsc && npx tsc-alias",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
@@ -31,6 +31,7 @@
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "inversify": "^6.0.1",
+    "jest": "^27.4.7",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.3",
     "mongoose": "^6.1.1",
@@ -40,6 +41,7 @@
     "routing-controllers": "^0.9.0",
     "routing-controllers-openapi": "^3.0.0",
     "swagger-ui-express": "^4.1.6",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5",
     "winston": "^3.3.3",
